# hexagon_rust

./: Cargo.toml  README.md
domain/: Cargo.toml
domain/src/user/: mod.rs
domain/src/user/model/: mod.rs  person.rs
domain/src/user/port/primary/: mod.rs  test_port.rs  user_port.rs
domain/src/user/port/secondary/: mod.rs  test_repository_port.rs  user_repository_port.rs
domain/src/user/use_case/: mod.rs  test_use_case.rs  user_use_case.rs
primary/: Cargo.toml
primary/src/rest/: mod.rs
primary/src/rest/user/: mod.rs
primary/src/rest/user/controller/: mod.rs  test_controller.rs  user_controller.rs
primary/src/rest/user/dto/: mod.rs  person_dto.rs
secondary/: Cargo.toml
secondary/src/mysql/user/: mod.rs
secondary/src/mysql/user/dbo/: mod.rs  person_dbo.rs
secondary/src/mysql/user/repository/: mod.rs  test_repository_adapter.rs  user_repository_adapter.rs
src/: main.rs
