[package]
name = "hexagon_rust"
version = "0.1.0"
authors = ["enrico <enrico@cora.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { version = "0.1.0", path = "domain" }
primary = { version = "0.1.0", path = "primary" }
secondary = { version = "0.1.0", path = "secondary" }
actix-web = "3"
futures = { version = "0.3.*" }
once_cell = "1.5.2"
actix-rt = "1.0"
shaku = "0.5.0"
lazy_static = "1.4.0"

[workspace]
members = [
    "domain",
    "primary",
    "secondary"
]