[package]
name = "secondary"
version = "0.1.0"
authors = ["enrico <enrico@cora.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { version = "0.1.0", path="../domain"}
uuid = { version = "0.8", features = ["serde", "v4"] }
shaku = "0.5.0"